<resources>
    <string name="app_name">CourseAdvizor</string>
    <string name="app_description">An IVR course advising assistant.</string>

    <string name="course_adviser">Course adviser</string>
    <string name="profile">Profile</string>
    <string name="student">Student</string>
    <string name="students">Students</string>
    <string name="result">Result</string>
    <string name="results">Results</string>
    <string name="appointments">Appointments</string>
    <string name="reports">Reports</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="pin">Pin</string>
    <string name="session">Session</string>
    <string name="department">Department</string>
    <string name="course_code">Course code</string>
    <string name="semester">Semester</string>

    <string name="add_result">Add result</string>
    <string name="edit_student_result">Edit student result</string>
    <string name="edit_appointment">Edit appointment</string>

    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="reply">Reply</string>
    <string name="reply_to_report">Reply to report</string>

    <string name="not_set">Not set</string>

    <string name="this_field_is_required">This field is required</string>
    <string name="this_field_is_invalid">This field is invalid</string>
    <string name="this_field_do_not_exist">This field do not exist</string>
    <string name="this_field_already_exists">This field already exists</string>
    <string name="course_adviser_with_session_and_department_already_exists">Course adviser with session and department already exists</string>
    <string name="student_result_with_student_and_result_id_already_exists">Student result with student and result id already exists</string>
    <string name="result_with_course_code_session_id_and_semester_already_exists">Result with course code, session id and semester already exists</string>

    <string name="no_result_id_set">A result ID was not set</string>
    <string name="no_student_found">No student found</string>
    <string name="no_result_found">No result found</string>
    <string name="no_appointment_found">No appointment found</string>
    <string name="date_not_fixed">Date not fixed</string>

    <string name="select_image">Select image</string>

    <string name="student_result_modified">Student result has been modified</string>
    <string name="appointment_updated">Appointment has been updated</string>
    <string name="report_updated">Report has been updated</string>

    <string name="new_appointment">New appointment</string>
    <string name="new_report">New report</string>

    <string name="your_reply__format">Your reply: %1$s</string>
    <string name="meeting_date__format">Meeting date: %1$s</string>
    <string name="request_date__format">Request date: %1$s</string>
    <string name="sent_date__format">Sent on: %1$s</string>
    <string name="semester__format">%1$s semester</string>
    <string name="grade__format">Grade: %1$s</string>
    <string name="session__format">%1$s session</string>
    <string name="new_appointment_requested__format">A new appointment has been requested from: %1$s</string>
    <string name="new_report_requested__format">A new report has been sent from: %1$s</string>

    <string-array name="grades">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
