<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable name="id" type="Long" />

        <variable
            name="viewModel"
            type="com.jasperanelechukwu.android.courseadvizor.viewmodels.ResultViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.ResultFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@id/collapsing_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorSurface"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false"
                app:toolbarId="@id/tool_bar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="@{viewModel.resultUiState.result != null ? View.VISIBLE : View.GONE}">

                    <TextView
                        style="@style/CustomResultTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.resultUiState.result.courseCode}"
                        android:textSize="@dimen/dimen_text_lg"
                        tools:text="@string/course_code"
                        />

                    <TextView
                        style="@style/CustomResultTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{@string/semester__format(viewModel.resultUiState.result.semester)}"
                        android:textSize="@dimen/dimen_text_3md"
                        tools:text="@string/semester"
                        />

                    <TextView
                        style="@style/CustomResultTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{@string/session__format(viewModel.resultUiState.result.session.toString())}"
                        android:textSize="@dimen/dimen_text_2md"
                        tools:text="@string/session"
                        />
                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@id/tool_bar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/CustomToolBar"
                    app:layout_collapseMode="pin"
                    app:title="@string/result" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.jasperanelechukwu.android.courseadvizor.ui.customviews.CustomFetchErrorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:errorText="@{viewModel.resultUiState.error}"
            android:retryClickListener="@{() -> viewModel.fetchResult(id)}"
            android:visibility="@{viewModel.resultUiState.error != null ? View.VISIBLE : View.GONE}"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="?attr/actionBarSize"
            android:padding="@dimen/dimen_md"
            android:visibility="@{viewModel.resultUiState.loading ? View.VISIBLE : View.GONE}"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@id/students_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dimen_md"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:itemCount="5"
            tools:listitem="@layout/view_holder_student_result_item"
            tools:context=".ui.fragments.dashboard.ResultFragment"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
