<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="java.util.Arrays" />

        <import type="android.view.View" />

        <import type="com.jasperanelechukwu.android.courseadvizor.entities.Result.Semester" />

        <variable
            name="viewModel"
            type="com.jasperanelechukwu.android.courseadvizor.viewmodels.ResultCreateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.ResultCreateFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/CustomToolBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/add_result" />

        <com.jasperanelechukwu.android.courseadvizor.ui.customviews.CustomEditTextLayout
            android:id="@id/course_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_md"
            android:hint="@string/course_code"
            android:error="@{viewModel.createResultUiState.courseCodeError}"
            android:enabled="@{!viewModel.createResultUiState.loading}"
            android:textChangedListener="@{viewModel::setCourseCode}"
            android:visibility="@{viewModel.sessionsUiState.loaded ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tool_bar"
            app:layout_constraintBottom_toTopOf="@id/semester_spinner"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.jasperanelechukwu.android.courseadvizor.ui.customviews.CustomSpinnerLayout
            android:id="@id/semester_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_md"
            android:error="@{viewModel.createResultUiState.semesterError}"
            android:hint="@string/semester"
            android:enabled="@{!viewModel.createResultUiState.loading}"
            android:itemSelectedListener="@{viewModel::setSemester}"
            android:options="@{Arrays.asList(Semester.values())}"
            android:visibility="@{viewModel.sessionsUiState.loaded ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/session_spinner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/course_code_edit_text" />

        <com.jasperanelechukwu.android.courseadvizor.ui.customviews.CustomSpinnerLayout
            android:id="@id/session_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_md"
            android:error="@{viewModel.createResultUiState.sessionError}"
            android:hint="@string/session"
            android:enabled="@{!viewModel.createResultUiState.loading}"
            android:itemSelectedListener="@{viewModel::setSession}"
            android:options="@{viewModel.sessionsUiState.sessions}"
            android:visibility="@{viewModel.sessionsUiState.loaded ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/sign_up_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/semester_spinner" />

        <com.jasperanelechukwu.android.courseadvizor.ui.customviews.CustomFormButtonLayout
            android:id="@id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_md"
            android:loading="@{viewModel.createResultUiState.loading}"
            android:onClick="@{()-> viewModel.createResult()}"
            android:text="@string/add_result"
            android:visibility="@{viewModel.sessionsUiState.loaded ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/session_spinner" />

        <com.jasperanelechukwu.android.courseadvizor.ui.customviews.CustomFetchErrorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:errorText="@{viewModel.sessionsUiState.error}"
            android:retryClickListener="@{() -> viewModel.fetchSessions()}"
            android:visibility="@{viewModel.sessionsUiState.error != null ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dimen_md"
            android:visibility="@{viewModel.sessionsUiState.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
